Fixed visibility transition for equip items

--- a/src/scss/EquipListItem.scss
+++ b/src/scss/EquipListItem.scss
@@ -3,7 +3,7 @@ $background: #E0D7C8;
 .equip-list-item {
 	padding: 20px;
 	border-radius: 20px;
-	max-height: 5rem;
+	max-height: 75px;
 	transition: max-height 0.25s ease-in;
 
 	&:hover {
@@ -16,9 +16,6 @@ $background: #E0D7C8;
 	}
 
 	.equip-details {
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
 		visibility: hidden;
 		font-size: 0.575rem;
 	}
@@ -26,12 +23,9 @@ $background: #E0D7C8;
 	&.selected {
 		background-color: darken($background, 10%);
 		border: 1px solid #615536;
-		max-height: 14rem;
+		max-height: 200px;
 
 		.equip-details {
-			position: relative;
-			top: 0;
-			left: 0;
 			visibility: visible;
 			transition: visibility 0s linear 0.20s;
 		}
